fixed stretching factions list

--- a/src/app/components/unit-details-dialog/tabs/unit-details-factions-tab.component.css
+++ b/src/app/components/unit-details-dialog/tabs/unit-details-factions-tab.component.css
@@ -21,6 +21,7 @@
     padding: 16px;
     gap: 8px 16px;
     align-items: start;
+    align-content: start;
     flex: 1;
     min-height: 0;
     overflow-x: hidden;
